force-app/main/default/objects/TrnCourse/fields/FacilitatorName__c.field-meta.xml
<CustomField>
    <fullName>FacilitatorName__c</fullName>
    <label>Facilitator Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>