force-app/main/default/objects/TrnCourse/fields/FacilitatorOrg__c.field-meta.xml
<CustomField>
    <fullName>FacilitatorOrg__c</fullName>
    <label>Facilitator Org</label>
    <length>100</length>
    <type>Text</type>
</CustomField>