force-app/main/default/objects/TrnCourse/fields/FacilitatorTitle__c.field-meta.xml
<CustomField>
    <fullName>FacilitatorTitle__c</fullName>
    <label>Facilitator Title</label>
    <length>30</length>
    <type>Text</type>
</CustomField>